--- a/Cargo.toml
+++ b/Cargo.toml
@@ -156,6 +156,7 @@ bloom = "0.3.2"
 pulsar = { version = "0.3.0", optional = true }
 task-compat = "0.1"
 cidr-utils = "0.4.1"
+k8s-openapi = { version = "0.7", features = ["v1_15"], optional = true }
 
 # For WASM
 vector-wasm = { path = "lib/vector-wasm", optional = true }
@@ -233,7 +234,7 @@ wasm-timings = ["wasm"]
 
 # Enables kubernetes dependencies and shared code. Kubernetes-related sources,
 # transforms and sinks should depend on this feature.
-kubernetes = []
+kubernetes = ["k8s-openapi"]
 
 # Sources
 sources = [
