--- a/Cargo.toml
+++ b/Cargo.toml
@@ -157,6 +157,7 @@ bloom = "0.3.2"
 pulsar = { version = "0.3.0", optional = true }
 task-compat = "0.1"
 k8s-openapi = { version = "0.7", features = ["v1_15"], optional = true }
+async-stream = "0.2"
 # For WASM
 vector-wasm = { path = "lib/vector-wasm", optional = true }
 lucetc = { git = "https://github.com/bytecodealliance/lucet.git", rev = "d4fc14a03bdb99ac83173d27fddf1aca48412a86", optional = true }
