--- a/Cargo.toml
+++ b/Cargo.toml
@@ -199,6 +199,7 @@ dirs = "2.0.2"
 tokio-test = "0.2"
 tokio = { version = "0.2", features = ["test-util"] }
 assert_cmd = "1.0"
+pin-project = "0.4"
 
 [features]
 # Default features for *-unknown-linux-gnu and *-apple-darwin
