--- a/config/vector.spec.toml
+++ b/config/vector.spec.toml
@@ -207,6 +207,13 @@ dns_servers = ["0.0.0.0:53"]
   # * unit: bytes
   max_line_bytes = 102400
 
+  # Number of first lines per file that should be skipped.
+  #
+  # * optional
+  # * default: 0
+  # * type: uint
+  skip_first_lines = 0
+
   # For files with a stored checkpoint at startup, setting this option to `true`
   # will tell Vector to read from the beginning of the file instead of the stored
   # checkpoint.
