--- a/Cargo.toml
+++ b/Cargo.toml
@@ -157,7 +157,7 @@ bloom = "0.3.2"
 pulsar = { version = "0.3.0", optional = true }
 task-compat = "0.1"
 cidr-utils = "0.4.1"
-k8s-openapi = { version = "0.7", features = ["v1_15"], optional = true }
+k8s-openapi = { version = "0.8", features = ["v1_15"], optional = true, git = "https://github.com/Arnavion/k8s-openapi.git", branch = "fix-70" }
 async-stream = "0.2"
 
 # For WASM
