--- a/lib/kubernetes-test-framework/Cargo.toml
+++ b/lib/kubernetes-test-framework/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 description = "Kubernetes Test Framework used to test Vector in Kubernetes"
 
 [dependencies]
-k8s-openapi = { version = "0.7", default-features = false, features = ["v1_15"] }
+k8s-openapi = { version = "0.8", default-features = false, features = ["v1_15"], git = "https://github.com/Arnavion/k8s-openapi.git", branch = "fix-70" }
 serde_json = "1"
 tempfile = "3"
 once_cell = "1"
