--- a/Cargo.toml
+++ b/Cargo.toml
@@ -157,8 +157,7 @@ bloom = "0.3.2"
 pulsar = { version = "0.3.0", optional = true }
 task-compat = "0.1"
 cidr-utils = "0.4.1"
-# TODO: switch to crates.io after fix for https://github.com/Arnavion/k8s-openapi/issues/70 is released
-k8s-openapi = { version = "0.8", features = ["v1_15"], optional = true, git = "https://github.com/timberio/k8s-openapi.git", branch = "fix-70" }
+k8s-openapi = { version = "0.8", features = ["v1_15"], optional = true }
 async-stream = "0.2"
 
 # For WASM
@@ -458,3 +457,7 @@ required-features = ["transforms-wasm", "transforms-lua"]
 
 [patch.'https://github.com/tower-rs/tower']
 tower-layer = "0.3"
+
+[patch.crates-io]
+# TODO: switch to crates.io after fix for https://github.com/Arnavion/k8s-openapi/issues/70 is released
+k8s-openapi = { git = "https://github.com/timberio/k8s-openapi.git", branch = "fix-70" }
